solve build error and update the readme.md

--- a/config/mosquitto.conf
+++ b/config/mosquitto.conf
@@ -2,7 +2,7 @@
 # Eclipse Mosquitto Configuration for IoT device communication
 
 # Basic Configuration
-pid_file /var/run/mosquitto.pid
+# pid_file disabled for container deployment
 persistence true
 persistence_location /mosquitto/data/
 log_dest file /mosquitto/log/mosquitto.log
@@ -27,7 +27,7 @@ max_connections 1000
 max_keepalive 65535
 
 # Message Size Limits (for video/audio metadata)
-message_size_limit 10485760  # 10MB
+max_packet_size 10485760  # 10MB
 
 # Logging
 log_type error
