--- a/package.xml
+++ b/package.xml
@@ -32,7 +32,7 @@
   <depend>tf2_geometry_msgs</depend>
   
   <!-- Audio/Media Dependencies -->
-  <depend>audio_msgs</depend>
+  <!-- Audio dependencies will be handled via custom message definitions when needed -->
   
   <!-- Communication Dependencies -->
   <depend>rosbridge_library</depend>
