--- a/src/router_agent/package.xml
+++ b/src/router_agent/package.xml
@@ -17,10 +17,8 @@
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
-  <depend>elderly_companion</depend>
-  
   <!-- Audio Processing -->
-  <depend>audio_msgs</depend>
+  <!-- Audio dependencies will be handled via custom message definitions when needed -->
   
   <!-- Communication -->
   <depend>rosbridge_library</depend>
@@ -28,7 +26,6 @@
   <!-- Python Dependencies (handled via pip) -->
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-scipy</exec_depend>
-  <exec_depend>python3-torch</exec_depend>
   
   <!-- Development Dependencies -->
   <test_depend>ament_lint_auto</test_depend>
